Today worked on .stripper validation and click next  and completed steg 3  on stripper

--- a/src/app/userstripper/userstripper.component.css
+++ b/src/app/userstripper/userstripper.component.css
@@ -41,8 +41,13 @@
   }
   
   .designButton button{
-    margin-right: 200px;
+    
     background-color: darkblue;
+    color: white;
+    margin-left: 15px;
+  }
+  .designButton button:first-child{
+    background-color: tomato;
     color: white;
   }
   
