--- a/src/app/userstripper/userstripper.component.html
+++ b/src/app/userstripper/userstripper.component.html
@@ -1,28 +1,28 @@
 <div class="example-container">
     <mat-stepper #stepper >
         <mat-step>
-            <app-stripper-step-one #dataref></app-stripper-step-one>           
+            <app-stripper-step-one #stepone></app-stripper-step-one>           
                 <ng-template matStepLabel>personal Details</ng-template>          
         </mat-step>  
 
         <mat-step label="Bank Details">
-            <app-stripper-stet-two></app-stripper-stet-two>
+            <app-stripper-stet-two #steptwo></app-stripper-stet-two>
            
         </mat-step>
         <mat-step label="Professional Detail">
-            <app-stripper-step-three></app-stripper-step-three>
+            <app-stripper-step-three #stepthree></app-stripper-step-three>
            
         </mat-step>
         <mat-step label="Education Detail">
-            <app-stripper-step-four></app-stripper-step-four>
+            <app-stripper-step-four #stepfour></app-stripper-step-four>
            
         </mat-step>
         <mat-step label="Experience Detail">
-            <app-stripper-step-five></app-stripper-step-five>
+            <app-stripper-step-five #stepfive></app-stripper-step-five>
             
         </mat-step>
         <mat-step label="Current Organization Detail">
-            <app-stripper-step-six></app-stripper-step-six>         
+            <app-stripper-step-six #stepsix></app-stripper-step-six>         
               <div>
                     <button mat-button matStepperPrevious>Back</button>
                     <button mat-button matStepperNext color="warn" routerLink="/thank-u-page">Finish</button>
@@ -30,7 +30,13 @@
         </mat-step>
     </mat-stepper>
 </div>
-<div class="designButton">
-    <button mat-button  (click)="next(stepper)">Next</button>
+
+<div class="container">
+<div class="row designButton">
+    <div class="col-10 m-auto text-right">
+        <button mat-button (click)="previousStepper(stepper)" [disabled]="stepper.selectedIndex === 0">Back</button>
+        <button mat-button  (click)="nextStepper(stepper)">Next</button>
+    </div>
+</div>
 </div>
     
