--- a/src/app/stripper-step-four/stripper-step-four.component.html
+++ b/src/app/stripper-step-four/stripper-step-four.component.html
@@ -1,11 +1,13 @@
 <div style=" margin-right: 80px;margin-top: 30px;text-align: right ;">
-  <button class="btn btn-primary">Add Aducation</button>
+  <button class="btn btn-primary" (click)="fuchideShow()">
+    Add Education
+  </button>
 </div>
-<div class="container">
+<div class="container w-100">
   <div style="text-align: center;">
     <h3>Education Details</h3>
   </div>
-  <table class="table table-striped"  >
+  <table class="table" [formGroup]="orderForm">
     <thead>
       <tr>
         <th>Education Name</th>
@@ -16,19 +18,47 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let character of characters">
-        <td>{{ character.actor_name }}</td>
-        <td>{{ character.character_name }}</td>
-        <td>{{ character.gender }}</td>
-        <td>{{ character.status }}</td>
-        <td><i style='font-size:24px' class='far'>&#xf044;</i></td>
-      </tr>
+
+
+      <ng-container formArrayName="items">
+
+        <ng-container *ngFor="let item of orderForm.get('items')['controls']; let i = index;">
+          <tr [formGroupName]="i">
+            <td class="form-group">
+              <input type="text" formControlName="educationname" placeholder="Education Name" class="form-control"
+                name="">
+                <div *ngIf="item.get('educationname').touched && item.get('educationname').invalid" class="danger">
+                  Education Name Required</div>
+            </td>
+
+            <td  class="form-group">
+              <input type="text" class="form-control" placeholder="University Name" formControlName="universityname" 
+                name="">
+                <div *ngIf="item.get('universityname').touched && item.get('universityname').invalid" class="danger">
+                  University Name Required</div>
+            </td>
+
+            <td  class="form-group">
+              <input type="text" class="form-control" formControlName="result" name="" placeholder="Result">
+              <div *ngIf="item.get('result').touched && item.get('educationname').invalid" class="danger">
+                Result Is Required</div>
+            </td>
+
+            <td  class="form-group">
+              
+              <input type="text" class="form-control" formControlName="yearofpassing" placeholder="Year Of Passing"
+                name="">
+                <div *ngIf="item.get('yearofpassing').touched && item.get('educationname').invalid" class="danger">
+                  Year Of Passing  is Requied</div>
+            </td>
+
+            <td>
+              <mat-icon *ngIf="!hideShow" style="color: blue; width: 50px;"  (click)="onSave()">save</mat-icon>   
+              <mat-icon style="color:red">delete</mat-icon>
+            </td>
+          </tr>
+        </ng-container>
+      </ng-container>
     </tbody>
   </table>
 </div>
-
-
-
-  
-
-
