--- a/src/app/stripper-step-one/stripper-step-one.component.html
+++ b/src/app/stripper-step-one/stripper-step-one.component.html
@@ -3,19 +3,21 @@
         <div class="card">
             <h4 style="text-align: center;">Professional Details</h4>
             <div class="card-body">
+
                 <form [formGroup]="stepOneForm">
                     <div class="form-row">
                         <div class="col form-group">
-                            <label for="firstName">FirstName</label>
+                            <label>FirstName</label>
                             <input type="text" formControlName="firstName" class="form-control" name=""
-                            [ngClass]="{ 'is-invalid':  f.firstName.invalid && (f.firstName.touched || f.firstName.dirty)}">
+                                [ngClass]="{ 'is-invalid':  f.firstName.invalid && (f.firstName.touched || f.firstName.dirty)}">
                             <div *ngIf=" f.firstName.invalid && (f.firstName.touched || f.firstName.dirty)"
                                 class="text-danger">
                                 <div *ngIf="f.firstName.errors?.required">FirstName is required</div>
                             </div>
                         </div>
+
                         <div class="col form-group">
-                            <label for="lastName">LastName</label>
+                            <label>LastName</label>
                             <input type="text" formControlName="lastName" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.lastName.invalid && (f.lastName.touched || f.lastName.dirty)}">
                             <div *ngIf=" f.lastName.invalid && (f.lastName.touched || f.lastName.dirty)"
@@ -23,8 +25,9 @@
                                 <div *ngIf="f.lastName.errors?.required">LastName is required</div>
                             </div>
                         </div>
+
                         <div class="col form-group">
-                            <label for="Email">Email</label>
+                            <label>Email</label>
                             <input type="text" formControlName="email" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.email.invalid && (f.email.touched || f.email.dirty) }">
                             <div *ngIf=" f.email.invalid && (f.email.touched || f.email.dirty)" class="text-danger">
@@ -32,10 +35,11 @@
                                 <div *ngIf="f.email.errors?.pattern">Please enter valid email address</div>
                             </div>
                         </div>
+
                     </div>
                     <div class="form-row">
                         <div class="col form-group">
-                            <label for="mobileNo">Mobile Number</label>
+                            <label>Mobile Number</label>
                             <input type="text" formControlName="mobileNo" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.mobileNo.invalid && (f.mobileNo.touched || f.mobileNo.dirty)}">
                             <div *ngIf=" f.mobileNo.invalid && (f.mobileNo.touched || f.mobileNo.dirty)"
@@ -44,8 +48,9 @@
                                 <div *ngIf="f.mobileNo.errors?.pattern">Enter 10 digit Mobile Number.</div>
                             </div>
                         </div>
+
                         <div class="col form-group">
-                            <label for="dateOfBirth">Date Of Birth</label>
+                            <label>Date Of Birth</label>
                             <input type="date" formControlName="dateOfBirth" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.dateOfBirth.invalid && (f.dateOfBirth.touched || f.dateOfBirth.dirty) }">
                             <div *ngIf=" f.dateOfBirth.invalid && (f.dateOfBirth.touched || f.dateOfBirth.dirty)"
@@ -53,9 +58,10 @@
                                 <div *ngIf="f.dateOfBirth.errors?.required">dateOfBirth is required</div>
                             </div>
                         </div>
+
                         <div class="col form-group">
 
-                            <label for="file">Image Upload</label>
+                            <label>Image Upload</label>
                             <input type="file" formControlName="file" class="form-control" name="" multiple
                                 [ngClass]="{ 'is-invalid':  f.file.invalid && (f.file.touched || f.file.dirty) }">
                             <div *ngIf=" f.file.invalid && (f.file.touched || f.file.dirty)" class="text-danger">
@@ -66,7 +72,7 @@
                     </div>
                     <div class="form-row  align-items-end">
                         <div class="col form-group">
-                            <label for="presentAddress">Present Address</label>
+                            <label>Present Address</label>
                             <input type="text" formControlName="presentAddress" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.presentAddress.invalid && (f.presentAddress.touched || f.presentAddress.dirty)}">
                             <div *ngIf=" f.presentAddress.invalid && (f.presentAddress.touched || f.presentAddress.dirty)"
@@ -74,8 +80,9 @@
                                 <div *ngIf="f.presentAddress.errors?.required">Present Address is required</div>
                             </div>
                         </div>
+
                         <div class="col form-group">
-                            <label for="permanentAaddress">Parmanent Address</label>
+                            <label>Parmanent Address</label>
                             <input type="text" formControlName="permanentAaddress" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.permanentAaddress.invalid && (f.permanentAaddress.touched || f.permanentAaddress.dirty)}">
                             <div *ngIf=" f.permanentAaddress.invalid && (f.permanentAaddress.touched || f.permanentAaddress.dirty)"
@@ -84,10 +91,11 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class=" col form-group form-check">
                             <input type="checkbox" formControlName="acceptTerms" name=""
                                 [ngClass]="{ 'is-invalid':  f.acceptTerms.invalid && (f.acceptTerms.touched || f.acceptTerms.dirty) }">
-                            <label for="acceptTerms">Accept Terms & Conditions</label>
+                            <label>Accept Terms & Conditions</label>
                             <div *ngIf=" f.acceptTerms.invalid && (f.acceptTerms.touched || f.acceptTerms.dirty)"
                                 class="text-danger">
                                 <div *ngIf="f.acceptTerms.errors?.required">Checkbox is required</div>
