--- a/src/app/stripper-step-six/stripper-step-six.component.html
+++ b/src/app/stripper-step-six/stripper-step-six.component.html
@@ -3,34 +3,41 @@
         <div class="card">
             <h4 style="text-align: center;">Current Organization Detail</h4>
             <div class="card-body">
+
                 <form [formGroup]="stepSixForm">
+
                     <div class="form-row">
                         <div class="col form-group">
-                            <label for="joiningDate">Joining date</label>
+                            <label>Joining Date</label>
                             <input type="date" formControlName="joiningDate" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.joiningDate.invalid && (f.joiningDate.touched || f.joiningDate.dirty)}">
                             <div *ngIf=" f.joiningDate.invalid && (f.joiningDate.touched || f.joiningDate.dirty)"
                                 class="text-danger">
-                                <div *ngIf="f.joiningDate.errors?.required">joiningDate is required</div>
+                                <div *ngIf="f.joiningDate.errors?.required">JoiningDate Is Required</div>
                             </div>
                         </div>
+
                         <div class="col form-group">
-                            <label for="appraisaldate">Next Appraisal Date</label>
+                            <label>Next Appraisal Date</label>
                             <input type="date" formControlName="appraisaldate" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.appraisaldate.invalid && (f.appraisaldate.touched || f.appraisaldate.dirty)}">
                             <div *ngIf=" f.appraisaldate.invalid && (f.appraisaldate.touched || f.appraisaldate.dirty)"
                                 class="text-danger">
-                                <div *ngIf="f.appraisaldate.errors?.required">appraisaldate is required</div>
+                                <div *ngIf="f.appraisaldate.errors?.required">Appraisal Date Is Required</div>
                             </div>
                         </div>
                     </div>
+
                     <div class="form-row">
                         <div class="col form-group">
-                            <label for="currentctc">Current Ctc</label>
-                            <input type="text" formControlName="currentctc"  placeholder="0" class="form-control" name=""
-                            [ngClass]="{ 'is-invalid':  f.currentctc.invalid && (f.currentctc.touched || f.currentctc.dirty)}">
-                            <div *ngIf=" f.currentctc.invalid && (f.currentctc.touched || f.currentctc.dirty)" class="text-danger">
-                                <div *ngIf="f.currentctc.errors?.required">currentctc  is required</div>
+                            <label>Current Ctc</label>
+                            <input type="text" formControlName="currentctc" ng-minlength=4 ng-maxlength=4
+                                placeholder="0" class="form-control" name=""
+                                [ngClass]="{ 'is-invalid':  f.currentctc.invalid && (f.currentctc.touched || f.currentctc.dirty)}">
+                            <div *ngIf=" f.currentctc.invalid && (f.currentctc.touched || f.currentctc.dirty)"
+                                class="text-danger">
+                                <div *ngIf="f.currentctc.errors?.required">current Etc Is required</div>
+                                <div *ngIf="f.currentctc.errors?.pattern">Enter 4 Digit Current Etc</div>
                             </div>
                         </div>
                     </div>
