--- a/src/app/stripper-step-three/stripper-step-three.component.html
+++ b/src/app/stripper-step-three/stripper-step-three.component.html
@@ -4,49 +4,55 @@
             <h4 style="text-align: center;">Professional Details</h4>
             <div class="card-body">
                 <form [formGroup]="stepThreeForm">
+
                     <div class="form-row">
                         <div class="col form-group">
-                            <label for="designation">Designation</label>
+                            <label>Designation</label>
                             <input type="text" formControlName="designation" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.designation.invalid && (f.designation.touched || f.designation.dirty)}">
                             <div *ngIf=" f.designation.invalid && (f.designation.touched || f.designation.dirty)"
                                 class="text-danger">
-                                <div *ngIf="f.designation.errors?.required">Designation is required</div>
+                                <div *ngIf="f.designation.errors?.required">Designation Is Required</div>
                             </div>
                         </div>
+
                         <div class="col form-group">
-                            <label for="department">Department</label>
+                            <label>Department</label>
                             <input type="text" formControlName="department" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.department.invalid && (f.department.touched || f.department.dirty)}">
                             <div *ngIf=" f.department.invalid && (f.department.touched || f.department.dirty)"
                                 class="text-danger">
-                                <div *ngIf="f.department.errors?.required">department is required</div>
+                                <div *ngIf="f.department.errors?.required">Department Is Required</div>
                             </div>
                         </div>
                     </div>
+
                     <div class="form-row">
                         <div class="col form-group">
-                            <label for="experience">Experience</label>
+                            <label>Experience</label>
                             <input type="text" formControlName="experience" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.experience.invalid && (f.experience.touched || f.experience.dirty)}">
                             <div *ngIf=" f.experience.invalid && (f.experience.touched || f.experience.dirty)"
                                 class="text-danger">
                                 <div *ngIf="f.experience.errors?.required">experience is required</div>
+                                <div *ngIf="f.experience.errors?.pattern">Enter 0-1 year experience</div>
                             </div>
                         </div>
+
                         <div class="col form-group">
-                            <label for="currentLocation">Current Location</label>
+                            <label>Current Location</label>
                             <input type="text" formControlName="currentLocation" class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.currentLocation.invalid && (f.currentLocation.touched || f.currentLocation.dirty)}">
                             <div *ngIf=" f.currentLocation.invalid && (f.currentLocation.touched || f.currentLocation.dirty)"
                                 class="text-danger">
-                                <div *ngIf="f.currentLocation.errors?.required">currentLocation is required</div>
+                                <div *ngIf="f.currentLocation.errors?.required">Current Location Is Required</div>
                             </div>
                         </div>
                     </div>
+
                     <div class="form-row">
                         <div class="col form-group">
-                            <label for="skill">Skills</label>
+                            <label>Skills</label>
                             <select class="form-control" name="" formControlName="skill"
                                 [ngClass]="{ 'is-invalid':  f.skill.invalid && (f.skill.touched || f.skill.dirty)}">
                                 <option value="Java">Java</option>
@@ -59,12 +65,13 @@
                                 <div *ngIf="f.skill.errors?.required">skill is required</div>
                             </div>
                         </div>
+
                         <div class="col form-group">
-                            <label for="upload">Resume Upload</label>
+                            <label>Resume Upload</label>
                             <input type="file" formControlName="upload" class="form-control" name="myfile" multiple
                                 [ngClass]="{ 'is-invalid':  f.upload.invalid && (f.upload.touched || f.upload.dirty)}">
                             <div *ngIf=" f.upload.invalid && (f.upload.touched || f.upload.dirty)" class="text-danger">
-                                <div *ngIf="f.upload.errors?.required">upload is required</div>
+                                <div *ngIf="f.upload.errors?.required">Upload Is Required</div>
                             </div>
                         </div>
                     </div>
