store the data from  localstorage and display list

--- a/src/app/stripper-step-one/stripper-step-one.component.html
+++ b/src/app/stripper-step-one/stripper-step-one.component.html
@@ -101,8 +101,13 @@
                                 <div *ngIf="f.acceptTerms.errors?.required">Checkbox is required</div>
                             </div>
                         </div>
+    
                     </div>
                 </form>
+                <div style="text-align: center;">
+                    <input type="checkbox">
+                    <label>Copy to permanent address</label>
+                </div>
             </div>
         </div>
     </div>
