--- a/src/app/userstripper/userstripper.component.css
+++ b/src/app/userstripper/userstripper.component.css
@@ -38,16 +38,21 @@
     text-align: right;
   }
   
-  .designButton button{
-    
+  .designButton button{ 
     background-color: darkblue;
     color: white;
     margin-left: 15px;
+    margin-top: 100px;
   }
   
   .designButton button:first-child{
     background-color: tomato;
     color: white;
+  }
+  .designButton button:third-child{
+    background-color: tomato;
+    color: white;
+    
   }
   
   
