complate my project

--- a/src/app/stripper-step-five/stripper-step-five.component.html
+++ b/src/app/stripper-step-five/stripper-step-five.component.html
@@ -1,5 +1,5 @@
 <div style="text-align: right; margin-right: 80px;margin-top: 30px;">
-  <button class="btn btn-primary" (click)="fuchideShow()">Add Experience</button>
+  <button class="btn btn-primary" (click)="addExperience()">Add Experience</button>
 </div>
 
 <div class="container">
