--- a/src/app/stripper-step-four/stripper-step-four.component.html
+++ b/src/app/stripper-step-four/stripper-step-four.component.html
@@ -1,5 +1,5 @@
 <div style=" margin-right: 80px;margin-top: 30px;text-align: right ;">
-  <button class="btn btn-primary" (click)="fuchideShow()">
+  <button class="btn btn-primary" (click)="addEducation()">
     Add Education
   </button>
 </div>
