--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -6,7 +6,7 @@
     <button class="btn btn-primary" routerLink="/userstripper">Add Employee</button>
 </div>
 
-<div class="container ">
+<div class="container">
     <table class="table">
         <thead>
             <tr>
@@ -31,6 +31,7 @@
                 <td>
                     <mat-icon style="color:blue" routerLink="/userstripper-edit/{{i}}">edit</mat-icon>
                     <mat-icon style="color:red" (click)="delete(i)">delete</mat-icon>
+                    <mat-icon style="color:blue" routerLink="/profile-page/{{i}}">remove_red_eye</mat-icon>
                 </td>
             </tr>
         </tbody>
