--- a/src/app/stripper-step-one/stripper-step-one.component.html
+++ b/src/app/stripper-step-one/stripper-step-one.component.html
@@ -1,7 +1,7 @@
 <body class="container">
     <div class="col-10 m-auto">
         <div class="card">
-            <h4 style="text-align: center;">Professional Details</h4>
+            <h4 style="text-align: center;">Personal Details</h4>
             <div class="card-body">
 
                 <form [formGroup]="stepOneForm">
@@ -60,9 +60,8 @@
                         </div>
 
                         <div class="col form-group">
-
                             <label>Image Upload</label>
-                            <input type="file" formControlName="file" class="form-control" name="" multiple
+                            <input type="file" (change)="uploadFile($event)"  formControlName="file" class="form-control" name="" multiple
                                 [ngClass]="{ 'is-invalid':  f.file.invalid && (f.file.touched || f.file.dirty) }">
                             <div *ngIf=" f.file.invalid && (f.file.touched || f.file.dirty)" class="text-danger">
                                 <div *ngIf="f.file.errors?.required">Choose image upload required</div>
@@ -73,7 +72,7 @@
                     <div class="form-row  align-items-end">
                         <div class="col form-group">
                             <label>Present Address</label>
-                            <input type="text" formControlName="presentAddress" class="form-control" name=""
+                            <input type="text" formControlName="presentAddress"   class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.presentAddress.invalid && (f.presentAddress.touched || f.presentAddress.dirty)}">
                             <div *ngIf=" f.presentAddress.invalid && (f.presentAddress.touched || f.presentAddress.dirty)"
                                 class="text-danger">
@@ -83,7 +82,7 @@
 
                         <div class="col form-group">
                             <label>Parmanent Address</label>
-                            <input type="text" formControlName="permanentAaddress" class="form-control" name=""
+                            <input type="text" formControlName="permanentAaddress"  [value]=" copyCtrl.value ?stepOneForm.controls['presentAddress'].value:''"  class="form-control" name=""
                                 [ngClass]="{ 'is-invalid':  f.permanentAaddress.invalid && (f.permanentAaddress.touched || f.permanentAaddress.dirty)}">
                             <div *ngIf=" f.permanentAaddress.invalid && (f.permanentAaddress.touched || f.permanentAaddress.dirty)"
                                 class="text-danger">
@@ -93,7 +92,7 @@
                         </div>
 
                         <div class=" col form-group form-check">
-                            <input type="checkbox" formControlName="acceptTerms" name=""
+                            <input type="checkbox" formControlName="acceptTerms"   name=""
                                 [ngClass]="{ 'is-invalid':  f.acceptTerms.invalid && (f.acceptTerms.touched || f.acceptTerms.dirty) }">
                             <label>Accept Terms & Conditions</label>
                             <div *ngIf=" f.acceptTerms.invalid && (f.acceptTerms.touched || f.acceptTerms.dirty)"
@@ -105,7 +104,7 @@
                     </div>
                 </form>
                 <div style="text-align: center;">
-                    <input type="checkbox">
+                    <input type="checkbox" [formControl]="copyCtrl" >
                     <label>Copy to permanent address</label>
                 </div>
             </div>
